# ktooh-media-batch

./: .gitattributes  .gitignore  APPENDIX_06_NOTEBOOK_OUTPUT_COLUMNS.md  PLAN.md  PLAN_DASHBOARD_TRAJECTORY_INTEGRATION.md  PLAN_TRAJECTORY_DASHBOARD_COMPAT_FIXES.md  PLAN_TRAJECTORY_FROM_06.md  PLAN_TRAJECTORY_REIMPLEMENTATION.md  README.md  methodology_summary_dwell_optimized_ko.md  pedestrian_trajectory_methodology_v2_formal.md  pyproject.toml  대시보드 추가페이지 요청_0414.pptx
samples/: demographic.jsonl  floating.jsonl
src/: __init__.py  attribution.py  collector.py  dashboard_registry.py  loader_audience.py  loader_traffic.py  main.py  models.py  normalization_demographic.py  normalization_floating.py  parser_demographic.py  parser_floating.py  pipeline.py  service.py  verify.py
src/common/: __init__.py  config.py
src/measurement/: __init__.py  attribution.py  collector.py  dashboard_registry.py  loader_audience.py  loader_traffic.py  main.py  normalization_demographic.py  normalization_floating.py  parser_demographic.py  parser_floating.py  pipeline.py  service.py  verify.py
src/trajectory/: __init__.py  artifacts.py  assignment.py  contracts.py  datetime_utils.py  global_units.py  intervals.py  loader.py  main.py  materialization.py  metrics.py  pipeline.py  revised_input.py  routes.py  scoring.py  solver.py  spatial.py  stages.py  verify.py
tests/: test_attribution.py  test_parser_and_normalization.py  test_pipeline.py
tests/fixtures/trajectory/golden/: README.md  golden_manifest.json
tests/trajectory/: test_artifacts.py  test_assignment.py  test_contracts.py  test_global_units.py  test_golden_contract.py  test_intervals.py  test_load_dashboard_cli.py  test_loader.py  test_loader_contract_fixes.py  test_main.py  test_materialization.py  test_metrics.py  test_revised_input.py  test_routes.py  test_scoring.py  test_solver.py  test_stages.py  test_verify.py
