[project]
name = "ktooh-media-batch"
version = "0.1.0"
description = "KT OOH Media measurement batch pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.69",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[project.scripts]
media-batch = "src.measurement.main:app"
trajectory-batch = "src.trajectory.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_unused_configs = true
