[project]
name = "ktooh-media-batch"
version = "0.1.0"
description = "KT OOH Media measurement batch pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.93",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
media-batch = "src.measurement.main:app"
trajectory-batch = "src.trajectory.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_unused_configs = true
